--- a/.travis.yml
+++ b/.travis.yml
@@ -4,8 +4,10 @@ sudo: required
   services:
   -docker
 
+
 before_install:
   - docker build -t orber3/docker-react -f Dockerfile.dev .
 
 script:
+  - docker run -e CI=true USERNAME/docker-react npm run test
   - docker run -e CI=true USERNAME/docker-react npm run test
