--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,5 @@
-
 sudo: required
-  services:
-  -docker
-
+services: -docker
 
 before_install:
   - docker build -t orber3/docker-react -f Dockerfile.dev .
