--- a/.travis.yml
+++ b/.travis.yml
@@ -6,3 +6,16 @@ before_install:
 
 script:
   - docker run -e CI=true orber3/docker-react npm run test
+
+  deploy:
+    provider: elasticbeanstalk
+    region: "us-east-2"
+    name: "docker-react"
+    env: "Docker-react-env"
+    bucket_name: "elasticbeanstalk-us-east-2-566201719075"
+    bucket_path: "docker-react"
+    on:
+      branch: master
+
+  access_key_id: $AWS_ACCESS_KEY
+  secret_access_key: "$AWS_SECRET_KEY"
